Thu Jul 22 13:10:00 1999 CEST Gabriele Bartolini <g.bartol@comune.prato.it>

	* htdig/Transport.cc, htdig/Transport.h, htdig/HtHTTP.cc, htdig/HtHTTP.h :
	Re-analyzed inheritance methods and attributes of the 2 classes. This is
	a first step, not definitive ... cos it still doesn't work as I hope.

Tue Jul 20 11:21:52 1999    <loic@ceic.com>

	* configure.in : added AM_MAINTAINER_MODE to prevent unwanted
	dependencies check by default.

	* db/Makefile.in : remove Makefile when distclean

Mon Jul 19 13:23:53 1999    <loic@ceic.com>

	* Makefile.config (INCLUDES): added -I$(top_srcdir)/include because
	automatically -I../include is not good, added -I$(top_builddir)/db/dist
	because some db headers are configure generated (if building in a directory
	that is not the source directory).

	* rename db/Makefile db/Makefile.in: otherwise it does not show
	up if if building in a directory that is not the source directory.

Mon Jul 19 13:02:22 1999    <loic@ceic.com>

	* .cvsignore: do not ignore Makefile.config

Sun Jul 18 22:47:49 1999  Geoff Hutchison  <ghutchis@wso.williams.edu>

	* htsearch/parser.cc: Eliminated compiler errors. Currently
	returns no matches until bugs in the WordList code are fixed.

Sun Jul 18 22:42:04 1999  Geoff Hutchison  <ghutchis@wso.williams.edu>

	* htmerge/htmerge.h: Cleanup, including WordRecord and
	WordReference as needed.

	* htmerge/htmerge.cc: Update for files necessary for merge
	calls.
	Call convertDocs before mergeWords so that the discardList gets
	the list of documents deleted.

	* htmerge/docs.cc: Update for difference in calling order.

	* htmerge/words.cc: Update (and significant cleanup) since
	WordList writes directly to db.words.db. Iterate over the stored
	words, deleting those from deleted documents.

	* htmerge/db.cc: Update to eliminate compiler errors. Currently
	disabled until bugs in the words code are fixed.

Sun Jul 18 22:33:49 1999  Geoff Hutchison  <ghutchis@wso.williams.edu>
